# AI-Crypto-Federated-Learning

./: .env.template  .gitignore  LICENSE  README.md  blockchain_config.json  docker-compose.yml
aggregator/: Dockerfile  global_aggregator.py  pyproject.toml
aggregator/optimized/: streaming_aggregator.py
blockchain/: Dockerfile  hardhat.config.js  package.json
blockchain/contracts/: ContributionLogging.sol  FedLearningToken.sol  Governance.sol  QualityVerification.sol  RewardDistribution.sol  blockchain_middleware.py
blockchain/contracts/abi/: ContributionLogging.json  FLGovernance.json  FedLearningToken.json  QualityVerification.json  RewardDistribution.json
blockchain/scripts/: deploy.js
blockchain/test/: ContributionLogging.test.js  FedLearningToken.test.js  QualityVerification.test.js
client/: client_config.yaml  fed_learning_client.py  local_training.py  privacy_utils.py
dashboard/: dashboard.py
db/: README.md
db/init/: 00_init_db.sh  01_schema.sql  02_seed_data.sql
examples/healthcare/: healthcare_diagnostic_client.py
middleware/: Dockerfile  pyproject.toml
middleware/api/: api_server.py
middleware/auth/: signature_verifier.py
middleware/blockchain/: transaction_manager.py
middleware/contracts/: ContributionLogging.json  FLGovernance.json  FedLearningToken.json  QualityVerification.json  RewardDistribution.json  current-deployment.json  deployment-localhost-1743633244044.json  deployment-localhost-1743633443562.json
middleware/security/: rate_limiter.py
models/: base_model.py  model_registry.py
scripts/: prepare_for_public.sh
tests/: README.md
tests/integration/: test_api_middleware.py  test_middleware_blockchain.py
tests/unit/: test_global_aggregator.py  test_local_trainer.py
utils/encoding/: model_data_handler.py
visualization/: .env.template  Dockerfile  dashboard.py  pyproject.toml  requirements.txt
