[tool.poetry]
name = "federated-learning-aggregator"
version = "0.1.0"
description = "Global aggregator for decentralized federated learning platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
requests = "^2.28.2"
pydantic = "^1.10.7"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
web3 = "^6.0.0"
eth-account = "^0.8.0"
aiohttp = "^3.8.4"
psutil = "^5.9.4"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"
asyncio = "^3.4.3"
httpx = "^0.24.0"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"
