[tool.poetry]
name = "federated-learning-dashboard"
version = "0.1.0"
description = "Visualization dashboard for decentralized federated learning platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.20.0"
plotly = "^5.13.0"
pandas = "^1.5.3"
numpy = "^1.23.5"
requests = "^2.28.2"
aiohttp = "^3.8.4"
python-dotenv = "^1.0.0"
pyjwt = "^2.6.0"
web3 = "^6.0.0"
eth-account = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
